# scrapers

MercadoTotal/: api_documentation.md  app.py  auth.py  config.py  models.py  models_extended.py  run_complete_collection.py  run_complete_system.py  simple_dashboard.py  test_dashboard_simple.py
Scraper-rad-cvm/: RAD CVM Superscraper.md  dashboard_integration.py  database.py  debug_response.html  debug_scraper.py  historical_scraper.py  index.html  main.py  pdf_processor.py  rad_cvm.py  rad_cvm_analysis.md  rad_cvm_scraper.py  rad_cvm_scraper_fixed.py  rad_cvm_scraper_requests.py  real_data_scraper.py  requirements.txt  test_scraper.py  todo.md
scraper/: app.py  config.py  database.py  extensions.py  extract_companies.py  main.py  models.py  populate_companies.py  pyproject.toml  replit.md  run_complete_system.py  run_cvm_etl.py  run_etl.py  start_complete_scraping.py  test_financial_data.py  utils.py
scraper/api/: companies.py  complementary.py  macroeconomics.py  market.py  news.py  technical.py
scraper/services/: calculations.py  company_filter.py  cvm_service.py  data_service.py  etl_companies.py  etl_cvm_financial.py  insider_transactions_service.py  scraper_b3.py  scraper_bacen.py  scraper_rad_cvm.py  scraper_rad_insiders.py
scraper/templates/: api_docs.html  base.html  companies.html  dashboard.html  index.html  market.html
scraper/utils/: auth.py  rate_limiter.py  validators.py
scripts/: audit_financial_data.py  audit_fre_data.py  build_master_list.py  check_encoding.py  create_scraper_schema.py  data_updater.py  db_inspector.py  deploy.py  etl_ipe.py  (+12 more)
(+38 files in other folders)
