[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-jwt-extended>=4.7.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "jwt>=1.4.0",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "textblob>=0.19.0",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "sqlalchemy>=2.0.41",
    "flask-cors>=6.0.1",
    "flask-limiter>=3.12",
    "flask-socketio>=5.5.1",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "numpy>=2.3.2",
    "schedule>=1.2.2",
    "beautifulsoup4>=4.13.4",
]
